# iris_mobile_examples

./: .gitignore  README.md
examples/: CMakeLists.txt  README.md
examples/enroll_identify/: CMakeLists.txt  enroll_identify_example.cpp  example.cpp
examples/ire3/: CMakeLists.txt
examples/ire3/enroll_identify/: CMakeLists.txt  ire3_enroll_identify.cpp
examples/ire3/extra_images/: CMakeLists.txt  ire3_extra_images.cpp
examples/irm2/: CMakeLists.txt
examples/irm2/enroll_identify/: CMakeLists.txt  enroll_identify_example.cpp
examples/irm2/kind7/: CMakeLists.txt  kind7_example.cpp
examples/kind7/: CMakeLists.txt  example.cpp  kind7_example.cpp
